# YTDL

./: .gitignore  README.md  SECURITY.md  cargo_errors.txt  config.py  eslint.config.js  index.html  requirements.txt  tailwind.config.ts  test_quality_fix.py  tsconfig.tsbuildinfo  vite.config.ts  web_app.py  youtube_downloader.py
.github/: release-notes-v2.md
.github/workflows/: codeql.yml  release-all-platforms.yml  release-v2.yml  release.yml
src/: i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs  playlist_commands.rs  rss.rs
src/components/: VideoPlayer.tsx
src/hooks/: useDownloads.ts  useSettings.ts
src/lib/: tauri.ts  utils.ts
src/locales/: en.json  ru.json
src/pages/: Download.tsx  Settings.tsx  Transcribe.tsx
src/store/: atoms.ts
v2/: README.md  README_TERMUX.md  README_UNIX.md  launcher.bat  launcher_termux.sh  requirements.txt  setup_termux.sh  web_app.py  youtube_downloader.py
v2/templates/: index.html
v3/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  video.json
v3/scripts/: setup-android-libs.js
v3/src-tauri/: Cargo.toml  tauri.conf.json
v3/src-tauri/capabilities/: default.json  updater-desktop.json
v3/src-tauri/src/: android_bridge.rs  android_commands.rs  commands.rs  db.rs  download.rs  error.rs  lib.rs  logger.rs  main.rs  playlist_commands.rs  rss.rs  rss_scheduler.rs  settings.rs  tool_install_commands.rs  transcription_commands.rs
(+30 files in other folders)
