[package]
name = "ytdl"
version = "3.0.0"
description = "YTDL - Cross-platform media downloader & transcriber"
authors = ["YTDL Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ytdl_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
dirs = "5"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
quick-xml = "0.36"
zip = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
